# transcribr

./: .gitignore  CHANGELOG.md  LICENSE  app.config.example  transcribr.cabal
app/: Main.hs
src/: Program.hs
src/Effect/: Console.hs  LLM.hs  Time.hs
src/Extra/Effectful/Error/: Static.hs
