cabal-version:      3.0
name:               transcribr
version:            0.1.0.0
synopsis:           An attempt at using whisper + LLM to summarize recordings
license:            MIT
license-file:       LICENSE
author:             Jonathan Moregård
maintainer:         jonathan.moregard@protonmail.com
category:           Simulation
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Effect.Console
    Effect.LLM
    Program

  build-depends:
    , base             ^>=4.16.4.0
    , bytestring
    , effectful
    , http-client
    , http-client-tls
    , openai-hs
    , openai-servant
    , text
    , time
    , unliftio
    , vector

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    GHC2021

executable transcribr
  main-is:            Main.hs
  build-depends:
    , base                  ^>=4.16.4.0
    , effectful
    , http-client
    , http-client-tls
    , openai-hs
    , openai-servant
    , optparse-applicative
    , text
    , time
    , transcribr
    , unliftio
    , vector

  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    GHC2021

test-suite transcribr-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            MyLibTest.hs
  build-depends:      base ^>=4.16.4.0
  default-extensions:
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    GHC2021
